Fix: overflow weird space right

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kadwa&display=swap');
 
+body {
+  overflow-x: hidden;
+}
+
 /* Header Styling */
 
 header {
